- Fixed: If none of the previous plugin maps could be found on startup, re-add the default
- Added GUI element for entering matrix or vector data in plugins
- Improve key handling while editing factor levels in a data.frame
- Added utiltity function rk.flush.output()			TODO: Output Window->Flush Output should use this
- RKWard is now categorized as Science/Math/Numerical Analysis in its .desktop file
- Fixed: Device history was not working with more recent versions of ggplot2 		(TODO: find out, which version broke it, exactly)
- Fixed: Option to include suggested packages in install was mis-labelled "install dependencies"
- rk.set.output.html.file() gains argument to allow addition of custom content to the html header

--- Version 0.6.0 - Oct-24-2012
- Fixed: Entering "0" as propabilities (quantiles) vector in distribution plugins would cause error message
- Preview device windows will display some status information (most importantly, warnings or errors)
- Most plot plugins gain options to control margins and tick label orientation
- Added option for installing packages from source (implicitly enabled on Unixoid platforms)
- Fixed: Wrong handling of carriage returns ('\r') in the console window
- Fixed: Spinboxes had wrong initial values
- Omit comments on missing function calls in dialog code windows (e.g., if prepare() is unused, there's no "## Prepare" in the output either)
- Output markup is now more XHTML compliant and easier to parse
- Also save cursor position, folding, etc. for scripts. Note: Implementation details may be subject to change.
- New function rk.list.labels() to retrieve column labels in a data.frame
- rk.get.label() will now return an empty string ("") instead of NULL, in case no label is assigned
- Fixed: Changed configuration settings would not be saved for script editor
- Fixed: One character missing in R commands on lines longer than 4096 characters